--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ script:
   - docker-compose build 
   - docker-compose up -d mongo
   - docker-compose up -d app
-  - docker-compose up -d api
+  - docker-compose up -d client
   #- docker build -t dextez/fullstack
   #- docker images dextez/fullstack
