--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,12 @@ script:
   - docker-compose up -d client
   #- docker build -t dextez/fullstack
   #- docker images dextez/fullstack
+
+before_deploy:
+  echo "$DOCKER_PASSWORD | - docker login -u "$DOCKER_USERNAME" --password-stdin
+
+deploy:
+  provider: script
+  script: docker push dextez/fullstack
+  on:
+    branch: master
