--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ script:
   #- docker images dextez/fullstack
 
 before_deploy:
-  echo "$DOCKER_PASSWORD | - docker login -u "$DOCKER_USERNAME" --password-stdin
+  echo "$DOCKER_PASSWORD" | - docker login -u "$DOCKER_USERNAME" --password-stdin
 
 deploy:
   provider: script
