--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,13 @@ script:
   - docker-compose up -d mongo
   - docker-compose up -d app
   - docker-compose up -d client
+  - docker build -t fullstack .
 
 before_deploy:
   echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 
 deploy:
   provider: script
-  script: docker push dextez/fullstack
+  script: docker push $DOCKER_USERNAME/fullstack
   on:
     branch: master
