--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,9 @@ script:
   - docker-compose up -d app
   - docker-compose up -d client
 
-  - docker tag mongo dextez/mongo
-  - docker tag mongo $DOCKER_USERNAME/app
-  - docker tag mongo $DOCKER_USERNAME/client
+ # - docker tag mongo dextez/mongo
+  #- docker tag mongo $DOCKER_USERNAME/app
+  #- docker tag mongo $DOCKER_USERNAME/client
  #- docker build -t $DOCKER_USERNAME/node .
  #- docker images $DOCKER_USERNAME/node
 
@@ -20,7 +20,10 @@ before_deploy:
 
 deploy:
   provider: script
-  script: docker push $DOCKER_USERNAME/mongo
+  script:  docker tag mongo dextez/mongo
+   - docker tag mongo $DOCKER_USERNAME/app
+   - docker tag mongo $DOCKER_USERNAME/client 
+   - docker push $DOCKER_USERNAME/mongo
    - docker push $DOCKER_USERNAME/app
    - docker push $DOCKER_USERNAME/client
   on:
