--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   app:
     container_name: app
+    image: app
     restart: always
     build: ./api
     ports:
@@ -11,6 +12,7 @@ services:
       - mongo
   client:
     container_name: client
+    image: client
     restart: always
     build: ./client
     ports:
